[package]
name = "hikvision-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
colored = "2.1.0"
clap = { version = "4.5.4", features = ["derive"] }
ipnetwork = "0.20"
local-ip-address = "0.6.1"
regex = "1.10.4"
tabular = "0.1.4"
base64 = "0.21.7"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }